--- a/src/styles/socials.scss
+++ b/src/styles/socials.scss
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: 1rem;
+    gap: .8rem;
     align-self: flex-end;
     margin-bottom: 1rem;
 
@@ -28,3 +28,19 @@
     }
 }
 
+.dark{
+    .icon{
+        fill: #fff;
+        opacity: 1;
+        &:hover{
+            fill: #48a0ff;
+            transform: scale(1.2);
+            opacity: 1;
+        }
+    }
+
+    .line{
+        background: #dadada;
+        opacity: 1;
+    }
+}
