--- a/src/styles/socials.scss
+++ b/src/styles/socials.scss
@@ -33,9 +33,10 @@
         fill: #fff;
         opacity: 1;
         &:hover{
-            fill: #48a0ff;
+            fill: #ffffff;
             transform: scale(1.2);
             opacity: 1;
+            fill: #9acbff;
         }
     }
 
