--- a/src/styles/contactForm.scss
+++ b/src/styles/contactForm.scss
@@ -4,46 +4,46 @@
 .contactForm{
     background: white;
     height: 100%;
-    min-width: 400px;
+    min-width: 25vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     font-family: 'Open Sans';
     font-weight: 300;
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: #1e263a;
-    padding: 2rem;
+    padding: 2vw;
     ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
         color: #a1a1a1;
         opacity: 1; /* Firefox */
     }
-    p{margin:  .2rem 0;}
+    p{margin:  .2vw 0;}
     .subtitle{
-        font-size: 1rem;
-        margin-bottom: 2rem;
+        font-size: 1.1vw;
+        margin-bottom: 2vw;
     }
 
     
     
     .form-controls{
-        margin-bottom: 2rem;
+        margin-bottom: 2vw;
         display: flex;
         flex-direction: column;
         input, textarea{
             background: rgb(238, 238, 238);
             color: #1e263a;
             font-weight: 300;
-            font-size: .9rem;
+            font-size: .9vw;
             font-family: 'Open Sans';
-            margin: .5rem 0;
+            margin: .5vw 0;
             border: 0px;
-            padding: .5rem;
+            padding: .5vw;
             outline: none;
             border-radius: 3px;
         }
 
         .message{
-         margin-bottom: 1rem;
+         margin-bottom: 1vw;
         }
     }
 
@@ -51,8 +51,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        gap: 1rem;
-        padding: .8rem .5rem;
+        gap: 1vw;
+        padding: .8vw .5vw;
         border-radius: 3px;
         border: 0px;
         font-family: 'Open Sans';
@@ -64,13 +64,14 @@
         transition: .2s all ease-in-out;
         background:#6788ff;
         outline: none;
+        font-size: .9vw;
         &:hover{
             box-shadow: 0px 5px 10px rgba(0,0,0, .2);
         }
 
         .loader{
-            height: 1.1rem !important;
-            width: 1.1rem !important;
+            height: 1.1vw !important;
+            width: 1.1vw !important;
             color: white;
         }
     }
@@ -114,5 +115,70 @@
         box-shadow: 1px 10px 10px rgba(0,0,0,.05) !important;
         color: black;
         font-weight: 600;
+    }
+}
+
+@media(max-width:1025px){
+    .contactForm{
+        min-width: 40vw;
+        font-size: 1.2rem;
+        padding: 2rem;
+        .subtitle{
+            font-size: .8rem;
+        }
+
+        .form-controls{
+            input,textarea{
+                font-size: .7rem;
+                padding: .5rem;
+            }
+        }
+
+        .submitButton{
+            font-size: .7rem;
+        }
+    }
+}
+
+@media(max-width:769px){
+    .contactForm{
+        min-width: 60vw;
+    }
+}
+
+@media(max-width:426px){
+    .contactForm{
+        min-width: 100vw;
+        .subtitle{
+            margin-bottom: 1rem;
+        }
+        .form-controls{
+            margin-bottom: 1rem;
+            gap: .5rem;
+        }
+        .submitButton{
+            padding: .8rem .5rem;
+        }
+    }
+
+    .snackBar{
+        .MuiPaper-root{
+            letter-spacing: 0px;
+            font-size: .8rem;
+            font-family: 'Open Sans';
+            box-shadow: 1px 10px 10px rgba(0,0,0,.05) !important;
+            font-weight: 300;
+        }
+    }
+    
+    .snackBar-dark{
+        .MuiPaper-root{
+            letter-spacing: 0px;
+            font-size: .8rem;
+            font-family: 'Open Sans';
+            box-shadow: 1px 10px 10px rgba(0,0,0,.05) !important;
+            color: black;
+            font-weight: 400;
+        }
     }
 }
