--- a/src/styles/contactForm.scss
+++ b/src/styles/contactForm.scss
@@ -29,7 +29,11 @@
         margin-bottom: 2vw;
         display: flex;
         flex-direction: column;
+        label{
+            width: 100%;
+        }
         input, textarea{
+            width: 100%;
             background: rgb(238, 238, 238);
             color: #1e263a;
             font-weight: 300;
